# shopify_integration

./: .deepsource.toml  .eslintignore  .eslintrc  .gitignore  .pre-commit-config.yaml  .releaserc.json  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.circleci/: config.yml  setup.sh
.github/helper/: install.sh  site_config.json
.github/workflows/: frappe.yml  main.yml
shopify_integration/: api.py  connector.py  customers.py  fulfilments.py  hooks.py  invoices.py  modules.txt  oauth.py  orders.py  patches.txt  payouts.py  products.py  setup.py  utils.py  webhook.py  webhooks.py
shopify_integration/config/: desktop.py  docs.py
shopify_integration/hook_events/: connected_app.py  item.py
shopify_integration/patches/: create_shopify_settings_documents.py
shopify_integration/shopify_integration/doctype/shopify_log/: shopify_log.js  shopify_log.json  shopify_log.py  shopify_log_list.js  test_shopify_log.py
shopify_integration/shopify_integration/doctype/shopify_payout/: shopify_payout.js  shopify_payout.json  shopify_payout.py  test_shopify_payout.py
shopify_integration/shopify_integration/doctype/shopify_payout_transaction/: shopify_payout_transaction.json  shopify_payout_transaction.py
shopify_integration/shopify_integration/doctype/shopify_settings/: shopify_settings.js  shopify_settings.json  shopify_settings.py  sync_customer.py  sync_payout.py  sync_product.py  test_shopify_settings.py
shopify_integration/tests/: test_shopify_settings.py
shopify_integration/tests/test_data/: shopify_item.json  shopify_order.json
(+6 files in other folders)
