[project]
name = "shopify_integration"
authors = [
    { name = "Parsimony LLC", email = "developers@parsimony.com"}
]
description = "Shopify integration with ERPNext"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "ShopifyAPI~=12.0.1"
]

[build-system]
requires = ['flit_core>=3.2,<4']
build-backend = 'flit_core.buildapi'

[tool.black]
line-length = 99

[tool.isort]
line_length = 99
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
indent = "\t"
